Aumento de folders
Creacion de folder modulos separados por Controller, Repositories y Model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://192.168.0.55:5432/pruebamicroservicio
+spring.datasource.username=postgres
+spring.datasource.password=Carlos2023.
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+# springdoc.api-docs.enabled= true
+# springdoc.swagger-ui.enabled = true
